examples/test/testpolicy7935.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7935
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key23: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value22
      podSelector:
        matchLabels:
          key36: value24
          key37: value7
          key26: value42
